--- a/api.html
+++ b/api.html
@@ -11,6 +11,7 @@
     />
     <!-- enlace al archivo de estilos personalizados -->
     <link href="css/estilos.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar: menú de navegación -->
@@ -108,22 +109,17 @@
               </li>
             </ul>
           </div>
-          <!-- sección de redes sociales -->
           <div class="col-md-4 text-center">
             <h5>Síguenos</h5>
-            <a
-              href="https://www.instagram.com/iamlpofficial/"
-              target="_blank"
-              class="text-white me-3"
-            >
-              <i class="bi bi-instagram" style="font-size: 1.5rem"></i>
+            <!-- enlaces a redes sociales con íconos -->
+            <a href="https://www.instagram.com/iamlpofficial/" target="_blank" class="text-white me-3">
+              <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
             </a>
-            <a
-              href="https://www.facebook.com/iamLP/"
-              target="_blank"
-              class="text-white me-3"
-            >
-              <i class="bi bi-facebook" style="font-size: 1.5rem"></i>
+            <a href="https://www.facebook.com/iamLP/" target="_blank" class="text-white me-3">
+              <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
+            </a>
+            <a href="https://twitter.com/iamlp" target="_blank" class="text-white">
+              <i class="bi bi-twitter" style="font-size: 1.5rem;"></i>
             </a>
           </div>
         </div>
@@ -134,6 +130,11 @@
       </div>
     </footer>
 
+
+
+
+
+    
     <!-- script para cargar los videoclips desde la API de YouTube -->
     <script>
       // clave de la API de YouTube
