--- a/biografia.html
+++ b/biografia.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
   <!-- enlace al archivo de estilos personalizados -->
   <link href="css/estilos.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
   
 </head>
 <body>
@@ -91,14 +92,17 @@
             <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
           </ul>
         </div>
-        <!-- sección de redes sociales -->
         <div class="col-md-4 text-center">
           <h5>Síguenos</h5>
+          <!-- enlaces a redes sociales con íconos -->
           <a href="https://www.instagram.com/iamlpofficial/" target="_blank" class="text-white me-3">
             <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
           </a>
           <a href="https://www.facebook.com/iamLP/" target="_blank" class="text-white me-3">
             <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
+          </a>
+          <a href="https://twitter.com/iamlp" target="_blank" class="text-white">
+            <i class="bi bi-twitter" style="font-size: 1.5rem;"></i>
           </a>
         </div>
       </div>
