--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- enlace al archivo de estilos personalizados -->
   <link href="css/estilos.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
 <body>
   <!-- navbar: menú de navegación -->
@@ -122,6 +123,9 @@
           </a>
           <a href="https://www.facebook.com/iamLP/" target="_blank" class="text-white me-3">
             <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
+          </a>
+          <a href="https://twitter.com/iamlp" target="_blank" class="text-white">
+            <i class="bi bi-twitter" style="font-size: 1.5rem;"></i>
           </a>
         </div>
       </div>
