--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Inicio - LP Fan Page</title>
-  <!-- enlace a bootstrap para estilos prediseñados -->
+      <link rel="icon" href="img/mic.ico/microphone.png" type="image/x-icon" />
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- enlace a bootstrap icons para usar íconos -->
+  <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
-  <!-- enlace al archivo de estilos personalizados -->
+  <!-- Estilos personalizados -->
   <link href="css/estilos.css" rel="stylesheet" />
+ 
 </head>
 <body>
   <!-- navbar: menú de navegación -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <!-- título del sitio -->
       <a class="navbar-brand" href="index.html">LP Fan Page</a>
-      <!-- botón para desplegar el menú en dispositivos móviles -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- enlaces del menú -->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
@@ -37,22 +37,49 @@
 
   <!-- contenido principal -->
   <main class="container my-5">
-    <!-- sección de bienvenida -->
-    <section class="text-center mb-5">
-      <h1 class="mb-4">Bienvenido a LP Fan Page</h1>
-      <p class="lead">explora la vida, música y momentos icónicos de LP. descubre su discografía, galería de fotos, videoclips y mucho más.</p>
-      <!-- botón para redirigir a la biografía -->
-      <a href="biografia.html" class="btn btn-primary">Conoce más sobre LP</a>
-    </section>
-
-    <!-- sección de fragmentos de letras -->
-    <section>
-      <h2 class="text-center mb-4">Fragmentos de Letras</h2>
-      <!-- contenedor para las letras que se cargarán dinámicamente -->
-      <div id="lyrics-list" class="row row-cols-1 row-cols-md-2 g-4">
-        <!-- aquí se mostrarán los fragmentos de letras -->
+    <!-- Bloque centrado con título, subtítulo y botón -->
+    <div class="row">
+      <div class="col-12">
+        <div class="text-center mb-4">
+          <h1 class="mb-4 text-primary">Bienvenido a LP Fan Page</h1>
+          <p class="lead">Explora la vida, música y momentos icónicos de LP. Descubre su discografía, galería de fotos, videoclips y mucho más.</p>
+          <a href="biografia.html" class="btn btn-primary" style="max-width: 250px;">Conoce más sobre LP</a>
+        </div>
       </div>
-    </section>
+    </div>
+    <div class="row">
+      <!-- Fragmentos de Letras -->
+      <div class="col-lg-8 mb-4">
+        <section>
+          <h2 class="text-center mb-4 text-primary">Fragmentos de Letras</h2>
+          <div id="lyrics-list" class="row row-cols-1 row-cols-md-2 g-4">
+            <!-- aca se mostrarán los fragmentos de letras -->
+          </div>
+        </section>
+      </div>
+      <!-- Noticias y Próximos Conciertos más abajo en desktop -->
+      <div class="col-lg-4 mb-4" style="margin-top: 8rem;">
+        <div class="d-flex flex-column gap-4">
+          <!-- Noticias -->
+          <section class="mb-0 p-3 bg-light rounded shadow-sm" style="border-left: 5px solid var(--lp-color);">
+            <h2 class="h5 mb-3 text-primary">Noticias</h2>
+            <ul class="mb-0">
+              <li>LP anunció una nueva gira mundial para 2025.</li>
+              <li>Nuevo sencillo disponible en todas las plataformas.</li>
+            </ul>
+          </section>
+          <!-- Próximos Conciertos -->
+          <section class="mb-0 p-3 bg-light rounded shadow-sm" style="border-left: 5px solid var(--lp-color);">
+            <h2 class="h5 mb-3 text-primary">Próximos Conciertos</h2>
+            <ul class="mb-0">
+              <li>Buenos Aires - 15/08/2025</li>
+              <li>Córdoba - 18/08/2025</li>
+              <li>Rosario - 20/08/2025</li>
+            </ul>
+          </section>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- footer: pie de página -->
@@ -61,31 +88,30 @@
       <div class="row">
         <!-- sección de información sobre el sitio -->
         <div class="col-md-4">
-          <h5>Sobre LP Fan Page</h5>
-          <p>un sitio dedicado a los fans de LP, donde puedes explorar su música, biografía, galería y más.</p>
+          <h5 class="text-primary">Sobre LP Fan Page</h5>
+          <p>Un sitio dedicado a los fans de LP, donde puedes explorar su música, biografía, galería y más.</p>
         </div>
         <!-- sección de enlaces rápidos -->
         <div class="col-md-4">
-          <h5>Enlaces rápidos</h5>
+          <h5 class="text-primary">Enlaces rápidos</h5>
           <ul class="list-unstyled">
-            <li><a href="index.html" class="text-white text-decoration-none">Inicio</a></li>
-            <li><a href="biografia.html" class="text-white text-decoration-none">Biografía</a></li>
-            <li><a href="discografia.html" class="text-white text-decoration-none">Discografía</a></li>
-            <li><a href="galeria.html" class="text-white text-decoration-none">Galería</a></li>
-            <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
+            <li><a href="index.html" class="text-primary text-decoration-none">Inicio</a></li>
+            <li><a href="biografia.html" class="text-primary text-decoration-none">Biografía</a></li>
+            <li><a href="discografia.html" class="text-primary text-decoration-none">Discografía</a></li>
+            <li><a href="galeria.html" class="text-primary text-decoration-none">Galería</a></li>
+            <li><a href="contacto.html" class="text-primary text-decoration-none">Contacto</a></li>
           </ul>
         </div>
         <!-- sección de redes sociales -->
         <div class="col-md-4 text-center">
-          <h5>Síguenos</h5>
-          <!-- enlaces a redes sociales con íconos -->
-          <a href="https://www.instagram.com/iamlpofficial/" target="_blank" class="text-white me-3">
+          <h5 class="text-primary">Síguenos</h5>
+          <a href="https://www.instagram.com/iamlpofficial/" target="_blank" class="text-lp me-3">
             <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
           </a>
-          <a href="https://www.facebook.com/iamLP/" target="_blank" class="text-white me-3">
+          <a href="https://www.facebook.com/iamLP/" target="_blank" class="text-lp me-3">
             <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
           </a>
-          <a href="https://twitter.com/iamlp" target="_blank" class="text-white">
+          <a href="https://twitter.com/iamlp" target="_blank" class="text-lp">
             <i class="bi bi-twitter" style="font-size: 1.5rem;"></i>
           </a>
         </div>
@@ -97,48 +123,56 @@
     </div>
   </footer>
 
-  <!-- script para cargar fragmentos de letras -->
+
+  
+  <!-- script para cargar letras -->
   <script>
-    async function cargarLetras() {
-      const lyricsList = document.getElementById('lyrics-list');
-      const canciones = [
-        { artista: 'LP', cancion: 'Lost on You' },
-        { artista: 'LP', cancion: 'Muddy Waters' },
-        { artista: 'LP', cancion: 'When We\'re High' },
-        { artista: 'LP', cancion: 'Strange' }
-      ];
+  async function cargarLetras() {
+    const canciones = [
+      { artista: "LP", cancion: "Lost on You" },
+      { artista: "LP", cancion: "Muddy Waters" },
+      { artista: "LP", cancion: "When We're High" },
+      { artista: "LP", cancion: "Strange" }
+    ];
+    const lyricsList = document.getElementById('lyrics-list');
+    lyricsList.innerHTML = "";
 
+    for (const item of canciones) {
       try {
-        // recorrer las canciones y obtener las letras desde la API
-        for (const { artista, cancion } of canciones) {
-          const response = await fetch(`https://api.lyrics.ovh/v1/${encodeURIComponent(artista)}/${encodeURIComponent(cancion)}`);
-          const data = await response.json();
-
-          // mostrar los primeros 4 versos de la letra
-          const letra = data.lyrics ? data.lyrics.split('\n').slice(0, 4).join('<br>') : 'Letra no disponible.';
-          const card = document.createElement('div');
-          card.classList.add('col');
-          card.innerHTML = `
-            <div class="card h-100">
-              <div class="card-body">
-                <h5 class="card-title">${cancion}</h5>
-                <p class="card-text">${letra}</p>
-              </div>
+        const res = await fetch(`https://api.lyrics.ovh/v1/${encodeURIComponent(item.artista)}/${encodeURIComponent(item.cancion)}`);
+        const data = await res.json();
+        let letra = data.lyrics
+          ? data.lyrics.split('\n').slice(0, 4).join('<br>')
+          : "Letra no disponible.";
+        const card = document.createElement('div');
+        card.classList.add('col');
+        card.innerHTML = `
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">${item.cancion}</h5>
+              <p class="card-text">${letra}</p>
             </div>
-          `;
-          lyricsList.appendChild(card);
-        }
-      } catch (error) {
-        // mostrar un mensaje de error si no se pueden cargar las letras
-        lyricsList.innerHTML = '<p class="text-danger text-center">Error al cargar las letras. Intenta nuevamente.</p>';
+          </div>
+        `;
+        lyricsList.appendChild(card);
+      } catch (e) {
+        const card = document.createElement('div');
+        card.classList.add('col');
+        card.innerHTML = `
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">${item.cancion}</h5>
+              <p class="card-text">Letra no disponible.</p>
+            </div>
+          </div>
+        `;
+        lyricsList.appendChild(card);
       }
     }
-
-    // cargar las letras al cargar la página
-    window.onload = cargarLetras;
+  }
+  window.onload = cargarLetras;
   </script>
-
-  <!-- enlace al script de bootstrap -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
