--- a/api.html
+++ b/api.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>API - Videoclips de LP</title>
-    <!-- enlace a bootstrap para estilos prediseñados -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <!-- enlace al archivo de estilos personalizados -->
+    <title>Videoclips de LP - Fan Page</title>
+        <link rel="icon" href="img/mic.ico/microphone.png" type="image/x-icon" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/estilos.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
   </head>
@@ -17,125 +14,112 @@
     <!-- navbar: menú de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <!-- título del sitio -->
         <a class="navbar-brand" href="index.html">LP Fan Page</a>
-        <!-- botón para desplegar el menú en dispositivos móviles -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <!-- enlaces del menú -->
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="biografia.html">Biografía</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="discografia.html">Discografía</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="galeria.html">Galería</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="api.html">Videoclips</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contacto</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="biografia.html">Biografía</a></li>
+            <li class="nav-item"><a class="nav-link" href="discografia.html">Discografía</a></li>
+            <li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
+            <li class="nav-item"><a class="nav-link active" href="api.html">Videoclips</a></li>
+            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- contenido principal -->
-    <main class="container my-5">
-      <!-- título principal de la página -->
-      <h1 class="mb-4 text-center">Videoclips de LP</h1>
-      <!-- contenedor para los videoclips -->
-      <div id="video-list" class="row row-cols-1 row-cols-md-3 g-4">
+    <!-- sección 1: presentación -->
+    <section class="container my-5">
+      <div class="row align-items-center">
+        <div class="col-lg-6 mb-4 mb-lg-0">
+          <img src="https://i.ytimg.com/vi/wDjeBNv6ip0/maxresdefault.jpg" alt="LP Videoclips" class="img-fluid rounded shadow">
+        </div>
+        <div class="col-lg-6 text-center text-lg-start">
+          <h1 class="mb-3 text-primary">Videoclips de LP</h1>
+          <p class="lead">Sumergite en el universo visual de LP. Acá vas a encontrar sus videoclips más icónicos, opiniones de fans y recomendaciones para descubrir nuevas canciones.</p>
+          <a href="#video-list" class="btn btn-primary mt-2">Ver videoclips</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- sección 2: opiniones de fans -->
+    <section class="container my-5">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <div class="bg-white rounded shadow p-4">
+            <h2 class="text-center mb-4 text-primary">Opiniones sobre los videoclips</h2>
+            <form id="form-opinion" class="mb-4">
+              <div class="mb-3">
+                <label for="opinion" class="form-label">¿Qué te pareció algún videoclip?</label>
+                <textarea id="opinion" class="form-control border-primary" rows="3" placeholder="Escribí tu opinión acá..." required></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Enviar opinión</button>
+            </form>
+            <div id="opiniones-lista">
+              <!-- Aquí se mostrarán las opiniones enviadas -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- sección 3: galería de videoclips -->
+    <section class="container my-5">
+      <h2 class="mb-4 text-center text-primary">Galería de Videoclips</h2>
+      <div id="video-list" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <!-- aquí se mostrarán los videoclips cargados desde la API -->
       </div>
-    </main>
+    </section>
 
-    <!-- footer: pie de página -->
-    <footer class="bg-dark text-white py-4">
-      <div class="container">
-        <div class="row">
-          <!-- sección de información sobre el sitio -->
-          <div class="col-md-4">
-            <h5>Sobre LP Fan Page</h5>
-            <p>
-              Un sitio dedicado a los fans de LP, donde puedes explorar su
-              música, biografía, galería y más.
-            </p>
-          </div>
-          <!-- sección de enlaces rápidos -->
-          <div class="col-md-4">
-            <h5>Enlaces rápidos</h5>
-            <ul class="list-unstyled">
-              <li>
-                <a href="index.html" class="text-white text-decoration-none"
-                  >Inicio</a
-                >
-              </li>
-              <li>
-                <a href="biografia.html" class="text-white text-decoration-none"
-                  >Biografía</a
-                >
-              </li>
-              <li>
-                <a
-                  href="discografia.html"
-                  class="text-white text-decoration-none"
-                  >Discografía</a
-                >
-              </li>
-              <li>
-                <a href="galeria.html" class="text-white text-decoration-none"
-                  >Galería</a
-                >
-              </li>
-              <li>
-                <a href="contacto.html" class="text-white text-decoration-none"
-                  >Contacto</a
-                >
-              </li>
+    <!-- sección 4: recomendados y curiosidades -->
+    <section class="container my-5">
+      <div class="row g-4">
+        <div class="col-md-6">
+          <div class="bg-white rounded shadow p-4 h-100">
+            <h3 class="text-primary mb-3"><i class="bi bi-star-fill me-2"></i>Recomendados</h3>
+            <ul class="mb-0">
+              <li><strong>Lost on You</strong> - El hit que la llevó al mundo.</li>
+              <li><strong>Muddy Waters</strong> - Un videoclip con mucha fuerza visual.</li>
+              <li><strong>When We're High</strong> - Perfecto para descubrir otra faceta de LP.</li>
             </ul>
           </div>
-          <div class="col-md-4 text-center">
-            <h5>Síguenos</h5>
-            <!-- enlaces a redes sociales con íconos -->
-            <a href="https://www.instagram.com/iamlpofficial/" target="_blank" class="text-white me-3">
-              <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
-            </a>
-            <a href="https://www.facebook.com/iamLP/" target="_blank" class="text-white me-3">
-              <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
-            </a>
-            <a href="https://twitter.com/iamlp" target="_blank" class="text-white">
-              <i class="bi bi-twitter" style="font-size: 1.5rem;"></i>
-            </a>
+        </div>
+        <div class="col-md-6">
+          <div class="bg-white rounded shadow p-4 h-100">
+            <h3 class="text-primary mb-3"><i class="bi bi-lightbulb me-2"></i>Curiosidades</h3>
+            <ul class="mb-0">
+              <li>LP suele participar en la dirección creativa de sus videos.</li>
+              <li>Muchos videoclips fueron grabados en escenarios naturales.</li>
+              <li>En "Lost on You" aparecen referencias a su vida personal.</li>
+            </ul>
           </div>
         </div>
-        <!-- mensaje de derechos reservados -->
-        <div class="text-center mt-3">
-          <p>&copy; 2025 LP Fan Page. Todos los derechos reservados.</p>
-        </div>
       </div>
-    </footer>
+    </section>
 
+    <!-- opiniones JS -->
+    <script>
+      // guardar y mostrar opiniones en la misma sesión
+      const form = document.getElementById('form-opinion');
+      const lista = document.getElementById('opiniones-lista');
 
+      form.addEventListener('submit', function(e) {
+        e.preventDefault();
+        const texto = document.getElementById('opinion').value.trim();
+        if (texto) {
+          const div = document.createElement('div');
+          div.className = "alert alert-secondary";
+          div.textContent = texto;
+          lista.prepend(div);
+          form.reset();
+        }
+      });
+    </script>
 
-
-
-    
-    <!-- script para cargar los videoclips desde la API de YouTube -->
+    <!-- cargar videoclips desde la API de YouTube -->
     <script>
       // clave de la API de YouTube
       const youtubeApiKey = "AIzaSyDj7qtADjD_CN_tA8WCAnxbOXn2yew1Kaw";
@@ -144,55 +128,83 @@
 
       // función para cargar los videoclips
       async function cargarVideoclips() {
-        const container = document.getElementById("video-list"); // contenedor donde se mostrarán los videoclips
+        const container = document.getElementById("video-list");
         try {
-          // realizar la solicitud a la API de YouTube
           const response = await fetch(
             `https://www.googleapis.com/youtube/v3/search?part=snippet&q=${encodeURIComponent(
               searchQuery
-            )}&type=video&key=${youtubeApiKey}&maxResults=8`
+            )}&type=video&key=${youtubeApiKey}&maxResults=6`
           );
           const data = await response.json();
 
-          // verificar si se encontraron resultados
           if (data.items && data.items.length > 0) {
-            // recorrer los resultados y crear tarjetas para cada videoclip
             data.items.forEach((video) => {
-              const videoId = video.id.videoId; // ID del video
-              const title = video.snippet.title; // título del video
-              const thumbnail = video.snippet.thumbnails.high.url; // miniatura del video
+              const videoId = video.id.videoId;
+              const title = video.snippet.title;
+              const thumbnail = video.snippet.thumbnails.high.url;
 
-              // crear una tarjeta para el videoclip
               const card = document.createElement("div");
               card.classList.add("col");
               card.innerHTML = `
-              <div class="card h-100 text-center">
-                <img src="${thumbnail}" class="card-img-top" alt="${title}" />
-                <div class="card-body">
-                  <h5 class="card-title">${title}</h5>
-                  <a href="https://www.youtube.com/watch?v=${videoId}" target="_blank" class="btn btn-primary">Ver en YouTube</a>
+                <div class="card h-100 text-center">
+                  <img src="${thumbnail}" class="card-img-top" alt="${title}" />
+                  <div class="card-body">
+                    <h5 class="card-title">${title}</h5>
+                    <a href="https://www.youtube.com/watch?v=${videoId}" target="_blank" class="btn btn-primary">Ver en YouTube</a>
+                  </div>
                 </div>
-              </div>
-            `;
-              container.appendChild(card); // agregar la tarjeta al contenedor
+              `;
+              container.appendChild(card);
             });
           } else {
-            // mostrar un mensaje si no se encontraron resultados
-            container.innerHTML =
-              '<p class="text-warning">No se encontraron videoclips.</p>';
+            container.innerHTML = '<p class="text-warning">No se encontraron videoclips.</p>';
           }
         } catch (error) {
-          // mostrar un mensaje de error si la solicitud falla
-          container.innerHTML =
-            '<p class="text-danger">Error al cargar los videoclips. Intenta nuevamente.</p>';
+          container.innerHTML = '<p class="text-danger">Error al cargar los videoclips. Intenta nuevamente.</p>';
         }
       }
 
-      // cargar los videoclips al cargar la página
       window.onload = cargarVideoclips;
     </script>
 
-    <!-- enlace al script de bootstrap -->
+    <!-- footer: pie de página -->
+    <footer class="bg-dark text-white py-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h5 class="text-primary">Sobre LP Fan Page</h5>
+            <p>
+              Un sitio dedicado a los fans de LP, donde podés explorar su música, biografía, galería y más.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h5 class="text-primary">Enlaces rápidos</h5>
+            <ul class="list-unstyled">
+              <li><a href="index.html" class="text-primary text-decoration-none">Inicio</a></li>
+              <li><a href="biografia.html" class="text-primary text-decoration-none">Biografía</a></li>
+              <li><a href="discografia.html" class="text-primary text-decoration-none">Discografía</a></li>
+              <li><a href="galeria.html" class="text-primary text-decoration-none">Galería</a></li>
+              <li><a href="contacto.html" class="text-primary text-decoration-none">Contacto</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 text-center">
+            <h5 class="text-primary">Síguenos</h5>
+            <a href="https://www.instagram.com/iamlpofficial/" target="_blank" class="text-lp me-3">
+              <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
+            </a>
+            <a href="https://www.facebook.com/iamLP/" target="_blank" class="text-lp me-3">
+              <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
+            </a>
+            <a href="https://twitter.com/iamlp" target="_blank" class="text-lp">
+              <i class="bi bi-twitter" style="font-size: 1.5rem;"></i>
+            </a>
+          </div>
+        </div>
+        <div class="text-center mt-3">
+          <p>&copy; 2025 LP Fan Page. Todos los derechos reservados.</p>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
