--- a/biografia.html
+++ b/biografia.html
@@ -96,42 +96,58 @@
     </div>
   </section>
 
-  <!-- footer: pie de página -->
-  <footer class="bg-dark text-white py-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h5 class="text-primary">Sobre LP Fan Page</h5>
-          <p>Un sitio dedicado a los fans de LP, donde puedes explorar su música, biografía, galería y más.</p>
-        </div>
-        <div class="col-md-4">
-          <h5 class="text-primary">Enlaces rápidos</h5>
-          <ul class="list-unstyled">
-            <li><a href="index.html" class="text-primary text-decoration-none">Inicio</a></li>
-            <li><a href="biografia.html" class="text-primary text-decoration-none">Biografía</a></li>
-            <li><a href="discografia.html" class="text-primary text-decoration-none">Discografía</a></li>
-            <li><a href="galeria.html" class="text-primary text-decoration-none">Galería</a></li>
-            <li><a href="contacto.html" class="text-primary text-decoration-none">Contacto</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 text-center">
-          <h5 class="text-primary">Síguenos</h5>
-          <a href="https://www.instagram.com/iamlpofficial/" target="_blank" class="text-lp me-3">
-            <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
-          </a>
-          <a href="https://www.facebook.com/iamLP/" target="_blank" class="text-lp me-3">
-            <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
-          </a>
-          <a href="https://twitter.com/iamlp" target="_blank" class="text-lp">
-            <i class="bi bi-twitter" style="font-size: 1.5rem;"></i>
-          </a>
-        </div>
+<!-- ...footer... -->
+<footer class="bg-dark text-white py-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h5 class="text-primary">Sobre LP Fan Page</h5>
+        <p>
+          Un sitio dedicado a los fans de LP, donde puedes explorar su
+          música, biografía, galería y más.
+        </p>
       </div>
-      <div class="text-center mt-3">
-        <p>&copy; 2025 LP Fan Page. Todos los derechos reservados.</p>
+      <div class="col-md-4">
+        <h5 class="text-primary">Enlaces rápidos</h5>
+        <ul class="list-unstyled">
+          <li>
+            <a href="index.html" class="text-primary text-decoration-none">Inicio</a>
+          </li>
+          <li>
+            <a href="biografia.html" class="text-primary text-decoration-none">Biografía</a>
+          </li>
+          <li>
+            <a href="discografia.html" class="text-primary text-decoration-none">Discografía</a>
+          </li>
+          <li>
+            <a href="galeria.html" class="text-primary text-decoration-none">Galería</a>
+          </li>
+          <li>
+            <a href="api.html" class="text-primary text-decoration-none">Videoclips</a>
+          </li>
+          <li>
+            <a href="contacto.html" class="text-primary text-decoration-none">Contacto</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-4 text-center">
+        <h5 class="text-primary">Síguenos</h5>
+        <a href="https://www.instagram.com/iamlpofficial/" target="_blank" class="text-lp me-3">
+          <i class="bi bi-instagram" style="font-size: 1.5rem"></i>
+        </a>
+        <a href="https://www.facebook.com/iamLP/" target="_blank" class="text-lp me-3">
+          <i class="bi bi-facebook" style="font-size: 1.5rem"></i>
+        </a>
+        <a href="https://twitter.com/iamlp" target="_blank" class="text-lp">
+          <i class="bi bi-twitter" style="font-size: 1.5rem"></i>
+        </a>
       </div>
     </div>
-  </footer>
+    <div class="text-center mt-3">
+      <p>&copy; 2025 LP Fan Page. Todos los derechos reservados.</p>
+    </div>
+  </div>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
